# api/swagger-output.json
@@ -2335,7 +2335,7 @@
           "게시판"
         ],
         "summary": "전체 게시물 목록",
-        "description": "전체 게시물 목록을 조회합니다.",
+        "description": "전체 게시물 목록을 조회합니다.<br>지원되는 검색 조건 이외의 속성으로 검색할 경우 custom 파라미터를 이용하면 됩니다.",
         "parameters": [
           {
             "name": "type",
@@ -3768,74 +3768,95 @@
           "회원 관리"
         ],
         "summary": "회원 목록 조회",
-        "description": "회원 목록을 조회한다.",
+        "description": "회원 목록을 조회합니다.<br>password, accessToken을 제외한 모든 사용자 정보를 반환합니다.<br>지원되는 검색 조건 이외의 속성으로 검색할 경우 custom 파라미터를 이용하면 됩니다.",
         "parameters": [
           {
             "name": "_id",
+            "description": "회원 id",
             "in": "query",
+            "example": "4",
             "schema": {
-              "type": "string"
+              "type": "number"
             }
           },
           {
             "name": "email",
+            "description": "회원 이메일",
             "in": "query",
+            "example": "u1@market.com",
             "schema": {
               "type": "string"
             }
           },
           {
             "name": "name",
+            "description": "회원 이름<br>정확히 일치하는 이름을 찾습니다.",
             "in": "query",
+            "example": "데이지",
             "schema": {
               "type": "string"
             }
           },
           {
             "name": "phone",
+            "description": "회원 전화번호",
             "in": "query",
+            "example": "01044445555",
             "schema": {
               "type": "string"
             }
           },
           {
             "name": "type",
+            "description": "회원 구분 (user | seller | admin)",
             "in": "query",
+            "example": "user",
             "schema": {
               "type": "string"
             }
           },
           {
             "name": "address",
+            "description": "회원 주소<br>지정한 검색어가 포함된 주소를 찾습니다.",
             "in": "query",
+            "example": "서울",
             "schema": {
               "type": "string"
             }
           },
           {
             "name": "custom",
+            "description": "custom 검색 조건<br>생일이 11월인 사용자 조회 예시",
             "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "sort",
-            "in": "query",
+            "example": "{'extra.birthday':{'$gte': '11', '$lt': '12'}}",
             "schema": {
               "type": "string"
             }
           },
           {
             "name": "page",
+            "description": "페이지",
             "in": "query",
+            "example": 2,
             "schema": {
-              "type": "string"
+              "type": "number"
             }
           },
           {
             "name": "limit",
+            "description": "한 페이지당 항목 수",
             "in": "query",
+            "example": 10,
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "sort",
+            "description": "정렬(내림차순: -1, 오름차순: 1)",
+            "in": "query",
+            "example": "{'createdAt': 1}",
+            "default": "{'createdAt': -1}",
             "schema": {
               "type": "string"
             }
@@ -3843,7 +3864,24 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "성공",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/userListRes"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "서버 에러",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/error500"
+                }
+              }
+            }
           }
         },
         "security": [
@@ -7053,6 +7091,109 @@
       "postListRes": {
         "type": "object",
         "properties": {}
+      },
+      "userListRes": {
+        "type": "object",
+        "properties": {
+          "ok": {
+            "type": "number",
+            "example": 1
+          },
+          "item": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "number",
+                  "example": 4
+                },
+                "email": {
+                  "type": "string",
+                  "example": "u1@market.com"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "데이지"
+                },
+                "phone": {
+                  "type": "string",
+                  "example": "01044445555"
+                },
+                "address": {
+                  "type": "string",
+                  "example": "서울시 강남구 논현동 222"
+                },
+                "type": {
+                  "type": "string",
+                  "example": "user"
+                },
+                "createdAt": {
+                  "type": "string",
+                  "example": "2024.03.22 11:10:45"
+                },
+                "updatedAt": {
+                  "type": "string",
+                  "example": "2024.03.31 23:40:45"
+                },
+                "extra": {
+                  "type": "object",
+                  "properties": {
+                    "birthday": {
+                      "type": "string",
+                      "example": "11-30"
+                    },
+                    "membershipClass": {
+                      "type": "string",
+                      "example": "MC02"
+                    },
+                    "address": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "number",
+                            "example": 2
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "집"
+                          },
+                          "value": {
+                            "type": "string",
+                            "example": "서울시 강동구 성내동 234"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "pagination": {
+            "type": "object",
+            "properties": {
+              "page": {
+                "type": "number",
+                "example": 1
+              },
+              "limit": {
+                "type": "number",
+                "example": 0
+              },
+              "total": {
+                "type": "number",
+                "example": 1
+              },
+              "totalPages": {
+                "type": "number",
+                "example": 1
+              }
+            }
+          }
+        }
       },
       "codeListRes": {
         "type": "object",
